--- a/PMS-PropertyHapa.Staff/Views/AccountSubType/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/AccountSubType/Index.cshtml
@@ -78,16 +78,16 @@
                 <input type="hidden" value="" id="accountSubTypeId" />
                 <div class="modal-body">
                     <div class="mb-3">
-                        <label for="accountTypeName" class="form-label">Account Type *</label>
+                        <label for="accountTypeName" class="form-label">Account Type <span class="text-danger">*</span></label>
                         <select class="form-control select2" id="accountTypeName" required>
                         </select>
                     </div>
                     <div class="mb-3">
-                        <label for="accountSubTypeName" class="form-label">Account Type *</label>
+                        <label for="accountSubTypeName" class="form-label">Account Type <span class="text-danger">*</span></label>
                         <input type="text" class="form-control" name="accountSubTypeName" id="accountSubTypeName" placeholder="Sub Account Type Name" required>
                     </div>
                     <div class="mb-3">
-                        <label for="accountSubTypeDescription" class="form-label">Description *</label>
+                        <label for="accountSubTypeDescription" class="form-label">Description <span class="text-danger">*</span></label>
                         <input type="text" class="form-control" name="accountSubTypeDescription" id="accountSubTypeDescription" placeholder="Description" required>
                     </div>
                     <div class="modal-footer">
