--- a/PMS-PropertyHapa.Staff/Views/AccountType/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/AccountType/Index.cshtml
@@ -75,7 +75,7 @@
                 <input type="hidden" value="" id="accountTypeId" />
                 <div class="modal-body">
                     <div class="mb-3">
-                        <label for="accountTypeName" class="form-label">Account Type *</label>
+                        <label for="accountTypeName" class="form-label">Account Type <span class="text-danger">*</span></label>
                         <input type="text" class="form-control" name="accountTypeName" id="accountTypeName" placeholder="Account Type Name" required>
                     </div>
                     <div class="modal-footer">
