--- a/PMS-PropertyHapa.Staff/Views/Applications/AddApplication.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Applications/AddApplication.cshtml
@@ -235,7 +235,7 @@
                                     <div class="row">
                                         <div class="col">
                                             <div class="mb-3">
-                                                <label for="appFirstName" class="form-label">First Name</label>
+                                                <label for="appFirstName" class="form-label">First Name<span class="text-danger">*</span></label>
                                                 <input type="text" class="form-control" placeholder="First Name" id="appFirstName" required>
                                             </div>
                                         </div>
@@ -247,7 +247,7 @@
                                         </div>
                                         <div class="col">
                                             <div class="mb-3">
-                                                <label for="appLastName" class="form-label">Last Name</label>
+                                                <label for="appLastName" class="form-label">Last Name<span class="text-danger">*</span></label>
                                                 <input type="text" class="form-control" placeholder="Last Name" id="appLastName" required>
                                             </div>
                                         </div>
@@ -256,7 +256,7 @@
                                     <div class="row">
                                         <div class="col">
                                             <div class="mb-3">
-                                                <label for="appSSN" class="form-label">SSN</label>
+                                                <label for="appSSN" class="form-label">SSN<span class="text-danger">*</span></label>
                                                 <input type="text" class="form-control" placeholder="SSN" id="appSSN" required>
                                             </div>
                                         </div>
@@ -268,7 +268,7 @@
                                         </div>
                                         <div class="col">
                                             <div class="mb-3">
-                                                <label for="appDOB" class="form-label">Date of Birth</label>
+                                                <label for="appDOB" class="form-label">Date of Birth<span class="text-danger">*</span></label>
                                                 <input type="date" class="form-control" placeholder="Date of Birth" id="appDOB" required>
                                             </div>
                                         </div>
@@ -277,13 +277,13 @@
                                     <div class="row">
                                         <div class="col">
                                             <div class="mb-3">
-                                                <label for="appEmail" class="form-label">Email</label>
+                                                <label for="appEmail" class="form-label">Email<span class="text-danger">*</span></label>
                                                 <input type="email" class="form-control" placeholder="Email" id="appEmail" required>
                                             </div>
                                         </div>
                                         <div class="col">
                                             <div class="mb-3">
-                                                <label for="appPhoneNmbr" class="form-label">Phone Number</label>
+                                                <label for="appPhoneNmbr" class="form-label">Phone Number<span class="text-danger">*</span></label>
                                                 <input type="tel" class="form-control" placeholder="Phone Number" id="appPhoneNmbr" required>
                                             </div>
                                         </div>
@@ -340,7 +340,7 @@
                                     <div class="row">
                                         <div class="col">
                                             <div class="mb-3">
-                                                <label for="resAddress" class="form-label">Address</label>
+                                                <label for="resAddress" class="form-label">Address<span class="text-danger">*</span></label>
                                                 <input type="text" class="form-control" placeholder="Address" id="resAddress" required>
                                             </div>
                                         </div>
@@ -369,7 +369,7 @@
                                     <div class="row">
                                         <div class="col">
                                             <div class="mb-3">
-                                                <label for="resMoveInDate" class="form-label">Move-in Date</label>
+                                                <label for="resMoveInDate" class="form-label">Move-in Date<span class="text-danger">*</span></label>
                                                 <input type="date" class="form-control" id="resMoveInDate" required>
                                             </div>
                                         </div>
@@ -389,7 +389,7 @@
                                     <div class="row">
                                         <div class="col">
                                             <div class="mb-3">
-                                                <label for="empJobType" class="form-label">Job Type</label>
+                                                <label for="empJobType" class="form-label">Job Type<span class="text-danger">*</span></label>
                                                 <input type="text" class="form-control" placeholder="Job Type" id="empJobType">
                                             </div>
                                         </div>
@@ -401,7 +401,7 @@
                                         </div>
                                         <div class="col">
                                             <div class="mb-3">
-                                                <label for="empAnnualIncome" class="form-label">Annual Income</label>
+                                                <label for="empAnnualIncome" class="form-label">Annual Income<span class="text-danger">*</span></label>
                                                 <input type="number" class="form-control" placeholder="Annual Income" id="empAnnualIncome">
                                             </div>
                                         </div>
@@ -410,7 +410,7 @@
                                     <div class="row">
                                         <div class="col">
                                             <div class="mb-3">
-                                                <label for="empCompanyName" class="form-label">Company Name</label>
+                                                <label for="empCompanyName" class="form-label">Company Name<span class="text-danger">*</span></label>
                                                 <input type="text" class="form-control" placeholder="Company Name" id="empCompanyName">
                                             </div>
                                         </div>
@@ -816,13 +816,13 @@
                                     <!-- Property Form -->
                                     <h2>Property </h2>
                                     <div class="mb-3">
-                                        <label for="applicantProperty" class="form-label ">Property</label>
+                                        <label for="applicantProperty" class="form-label ">Property<span class="text-danger">*</span></label>
                                         <select class="form-control select2" id="applicantProperty" required>
                                             <option></option>
                                         </select>
                                     </div>
                                     <div class="mb-3">
-                                        <label for="applicantUnits" class="form-label">Units</label>
+                                        <label for="applicantUnits" class="form-label">Unit<span class="text-danger">*</span></label>
                                         <select class="form-control select2" multiple="multiple" id="applicantUnits" required>
                                         </select>
                                     </div>
@@ -850,7 +850,7 @@
                                     </div>
                                     <div class="form-check mb-3">
                                         <input class="form-check-input" type="checkbox" id="agreeCheckbox">
-                                        <label class="form-check-label" for="agreeCheckbox">I agree to the terms and conditions</label>
+                                        <label class="form-check-label" for="agreeCheckbox">I agree to the terms and conditions.<span class="text-danger">*</span></label>
                                     </div>
                                 </form>
 
