--- a/PMS-PropertyHapa.Staff/Views/ChartAccounts/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/ChartAccounts/Index.cshtml
@@ -76,21 +76,21 @@
                 <input type="hidden" value="" id="chartAccountId" />
                 <div class="modal-body">
                     <div class="mb-3">
-                        <label for="accountTypeName" class="form-label">Account Type *</label>
+                        <label for="accountTypeName" class="form-label">Account Type <span class="text-danger">*</span></label>
                         <select class="form-control select2" id="accountTypeName" required>
                         </select>
                     </div>
                     <div class="mb-3">
-                        <label for="accountSubTypeName" class="form-label">Account Sub Type *</label>
+                        <label for="accountSubTypeName" class="form-label">Account Sub Type <span class="text-danger">*</span></label>
                         <select class="form-control select2" id="accountSubTypeName" required>
                         </select>
                     </div>
                     <div class="mb-3">
-                        <label for="accountName" class="form-label">Account Name *</label>
+                        <label for="accountName" class="form-label">Account Name <span class="text-danger">*</span></label>
                         <input type="text" class="form-control" name="accountName" id="accountName" placeholder="Account Name" required>
                     </div>
                     <div class="mb-3">
-                        <label for="accountDescription" class="form-label">Description *</label>
+                        <label for="accountDescription" class="form-label">Description <span class="text-danger">*</span></label>
                         <input type="text" class="form-control" name="accountDescription" id="accountDescription" placeholder="Description" required>
                     </div>
                     <div class="mb-3">
