--- a/PMS-PropertyHapa.Staff/Views/Applications/EditApplication.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Applications/EditApplication.cshtml
@@ -80,7 +80,7 @@
                                     <div class="row">
                                         <div class="col">
                                             <div class="mb-3">
-                                                <label for="appFirstName" class="form-label">First Name</label>
+                                                <label for="appFirstName" class="form-label">First Name<span class="text-danger">*</span></label>
                                                 <input type="text" class="form-control" placeholder="First Name" value="@Model.FirstName" id="appFirstName" required>
                                             </div>
                                         </div>
@@ -92,7 +92,7 @@
                                         </div>
                                         <div class="col">
                                             <div class="mb-3">
-                                                <label for="appLastName" class="form-label">Last Name</label>
+                                                <label for="appLastName" class="form-label">Last Name<span class="text-danger">*</span></label>
                                                 <input type="text" class="form-control" placeholder="Last Name" value="@Model.LastName" id="appLastName" required>
                                             </div>
                                         </div>
@@ -101,7 +101,7 @@
                                     <div class="row">
                                         <div class="col">
                                             <div class="mb-3">
-                                                <label for="appSSN" class="form-label">SSN</label>
+                                                <label for="appSSN" class="form-label">SSN<span class="text-danger">*</span></label>
                                                 <input type="text" class="form-control" placeholder="SSN" value="@Model.SSN" id="appSSN" required>
                                             </div>
                                         </div>
@@ -113,7 +113,7 @@
                                         </div>
                                         <div class="col">
                                             <div class="mb-3">
-                                                <label for="appDOB" class="form-label">Date of Birth</label>
+                                                <label for="appDOB" class="form-label">Date of Birth<span class="text-danger">*</span></label>
                                                 <input type="date" class="form-control" placeholder="Date of Birth" value="@Model.DOB.Date.ToString("yyyy-MM-dd")" id="appDOB" required>
                                             </div>
                                         </div>
@@ -122,13 +122,13 @@
                                     <div class="row">
                                         <div class="col">
                                             <div class="mb-3">
-                                                <label for="appEmail" class="form-label">Email</label>
+                                                <label for="appEmail" class="form-label">Emai<span class="text-danger">*</span>l</label>
                                                 <input type="email" class="form-control" placeholder="Email" value="@Model.Email" id="appEmail" required>
                                             </div>
                                         </div>
                                         <div class="col">
                                             <div class="mb-3">
-                                                <label for="appPhoneNmbr" class="form-label">Phone Number</label>
+                                                <label for="appPhoneNmbr" class="form-label">Phone Number<span class="text-danger">*</span></label>
                                                 <input type="tel" class="form-control" placeholder="Phone Number" value="@Model.PhoneNumber" id="appPhoneNmbr" required>
                                             </div>
                                         </div>
@@ -221,13 +221,13 @@
                                     <div class="row">
                                         <div class="col">
                                             <div class="mb-3">
-                                                <label for="resAddress" class="form-label">Address</label>
+                                                <label for="resAddress" class="form-label">Address<span class="text-danger">*</span></label>
                                                 <input type="text" class="form-control" placeholder="Address" value="@Model.Address" id="resAddress" required>
                                             </div>
                                         </div>
                                         <div class="col">
                                             <div class="mb-3">
-                                                <label for="resLandlord" class="form-label">Landlord / Company Name</label>
+                                                <label for="resLandlord" class="form-label">Landlord / Company Name<span class="text-danger">*</span></label>
                                                 <input type="text" class="form-control" placeholder="Landlord / Company Name" value="@Model.LandlordName" id="resLandlord">
                                             </div>
                                         </div>
@@ -270,7 +270,7 @@
                                     <div class="row">
                                         <div class="col">
                                             <div class="mb-3">
-                                                <label for="empJobType" class="form-label">Job Type</label>
+                                                <label for="empJobType" class="form-label">Job Type<span class="text-danger">*</span></label>
                                                 <input type="text" class="form-control" placeholder="Job Type" value="@Model.JobType" id="empJobType">
                                             </div>
                                         </div>
@@ -282,7 +282,7 @@
                                         </div>
                                         <div class="col">
                                             <div class="mb-3">
-                                                <label for="empAnnualIncome" class="form-label">Annual Income</label>
+                                                <label for="empAnnualIncome" class="form-label">Annual Income<span class="text-danger">*</span></label>
                                                 <input type="number" class="form-control" placeholder="Annual Income" value="@Model.AnnualIncome" id="empAnnualIncome">
                                             </div>
                                         </div>
@@ -291,7 +291,7 @@
                                     <div class="row">
                                         <div class="col">
                                             <div class="mb-3">
-                                                <label for="empCompanyName" class="form-label">Company Name</label>
+                                                <label for="empCompanyName" class="form-label">Company Name<span class="text-danger">*</span></label>
                                                 <input type="text" class="form-control" placeholder="Company Name" value="@Model.CompanyName" id="empCompanyName">
                                             </div>
                                         </div>
@@ -980,13 +980,13 @@
                                     <!-- Property Form -->
                                     <h2>Property </h2>
                                     <div class="mb-3">
-                                        <label for="applicantProperty" class="form-label ">Property</label>
+                                        <label for="applicantProperty" class="form-label ">Property<span class="text-danger">*</span></label>
                                         <select class="form-control select2" id="applicantProperty" required>
                                            @* <option selected disabled value="">Please Select</option> *@
                                         </select>
                                     </div>
                                     <div class="mb-3">
-                                        <label for="applicantUnits" class="form-label">Units</label>
+                                        <label for="applicantUnits" class="form-label">Units<span class="text-danger">*</span></label>
                                         <select class="form-control select2" multiple="multiple" id="applicantUnits" required>
                                         </select>
                                     </div>
@@ -1006,7 +1006,7 @@
                                     </div>
                                     <div class="form-check mb-3">
                                          <input class="form-check-input" type="checkbox" id="agreeCheckbox" @(Model.IsAgree ? "checked" : "")>
-                                        <label class="form-check-label" for="agreeCheckbox">I agree to the terms and conditions</label>
+                                        <label class="form-check-label" for="agreeCheckbox">I agree to the terms and conditions.<span class="text-danger">*</span></label>
                                     </div>
                                 </form>
 
