--- a/PMS-PropertyHapa.Staff/Views/Communication/AddCommunication.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Communication/AddCommunication.cshtml
@@ -157,7 +157,7 @@
 
                                     <div id="propertiesDropdown" class="row d-flex justify-content-center mt-3 d-none">
                                         <div class="col-4">
-                                            <label for="announcementProperties">Select Properties</label>
+                                            <label for="announcementProperties">Select Properties <span class="text-danger">*</span></label>
                                             <div id="propertyCount" class="selected-count">0 Selected</div>
                                             <select id="announcementProperties" multiple name="announcementProperties" class="form-control select2" required></select>
                                         </div>
@@ -193,7 +193,7 @@
 
                                         <div id="tenantsDropdown" class="row d-flex justify-content-center mt-3 d-none">
                                             <div class="col-4">
-                                                <label for="announcementTenants">Select Tenants</label>
+                                                <label for="announcementTenants">Select Tenants <span class="text-danger">*</span></label>
                                                 <div id="tenantCount" class="selected-count">0 Selected</div>
                                                 <select id="announcementTenants" multiple name="announcementTenants" class="form-control select2" required></select>
                                             </div>
