--- a/PMS-PropertyHapa.Staff/Views/Subscriptions/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Subscriptions/Index.cshtml
@@ -147,12 +147,12 @@
                 <div class="modal-body">
                     <div class="mb-3">
                         <input type="hidden" id="product-Id">
-                        <label for="name" class="form-label">Name</label>
+                        <label for="name" class="form-label">Name <span class="text-danger">*</span></label>
                         <input id="name" class="form-control" placeholder="Enter Name" required />
                     </div>
 
                     <div class="mb-3">
-                        <label for="card-element" class="form-label">Card</label>
+                        <label for="card-element" class="form-label">Card <span class="text-danger">*</span></label>
                         <div id="card-element" class="form-control"></div>
                         <div id="card-errors" class="text-danger mt-2" role="alert"></div>
                     </div>
