--- a/PMS-PropertyHapa.Staff/Views/SupportCenter/BookDemo.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/SupportCenter/BookDemo.cshtml
@@ -35,13 +35,13 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="firstName">First Name</label>
+                                <label for="firstName">First Name <span class="text-danger">*</span></label>
                                 <input type="text" class="form-control" id="firstName" placeholder="Enter your first name">
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="lastName">Last Name</label>
+                                <label for="lastName">Last Name <span class="text-danger">*</span></label>
                                 <input type="text" class="form-control" id="lastName" placeholder="Enter your last name">
                             </div>
                         </div>
@@ -50,13 +50,13 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="email">Email</label>
+                                <label for="email">Email <span class="text-danger">*</span></label>
                                 <input type="email" class="form-control" id="email" placeholder="Enter your email">
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="phoneNumber">Phone Number</label>
+                                <label for="phoneNumber">Phone Number <span class="text-danger">*</span></label>
                                 <input type="text" class="form-control" id="phoneNumber" placeholder="Enter your phone number">
                             </div>
                         </div>
@@ -65,13 +65,13 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="companyName">Company Name</label>
+                                <label for="companyName">Company Name <span class="text-danger">*</span></label>
                                 <input type="text" class="form-control" id="companyName" placeholder="Enter your company name">
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
-                                <label for="totalUnits">Total Units Managed in Portfolio</label>
+                                <label for="totalUnits">Total Units Managed in Portfolio <span class="text-danger">*</span></label>
                                 <input type="number" class="form-control" id="totalUnits">
                             </div>
                         </div>
