--- a/PMS-PropertyHapa.Staff/Views/SupportCenter/ContactUs.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/SupportCenter/ContactUs.cshtml
@@ -31,11 +31,11 @@
                     <div class="card-body">
                         <form id="contactUsForm">
                             <div class="form-group">
-                                <label for="name">Name</label>
+                                <label for="name">Name <span class="text-danger">*</span></label>
                                 <input type="text" class="form-control" id="name" placeholder="Enter your name">
                             </div>
                             <div class="form-group">
-                                <label for="email">Email</label>
+                                <label for="email">Email <span class="text-danger">*</span></label>
                                 <input type="email" class="form-control" id="email" placeholder="Enter your email">
                             </div>
                             <div class="form-group">
@@ -43,7 +43,7 @@
                                 <input type="text" class="form-control" id="phoneNumber" placeholder="Enter your phone number">
                             </div>
                             <div class="form-group">
-                                <label for="message">Message</label>
+                                <label for="message">Message <span class="text-danger">*</span></label>
                                 <textarea class="form-control" id="message" rows="3" placeholder="Enter your message"></textarea>
                             </div>
                             <div class="form-group">
